# ai-knowhow

./: .gitignore  AnythingLLM-Claude-Code-Integration.md  README.md  TODO.md  ai-knowhow-bmad.code-workspace  ai-knowhow.code-workspace  bmad_concepts.md  bmad_docs.md  bmad_helloworld_tutorial.md  bmad_knowhow.md  bmad_workflow_status_next_step.md  llms-full.md  python_versions.md
Overview_Tutorials/: claude_code_docs.md  claude_code_knowhow.md
Overview_Tutorials/archive/: claude_code_tutorials1.md  claude_code_tutorials2b.md
Overview_Tutorials/claude_config/etc/claude-code/: managed-settings.json
Overview_Tutorials/claude_config/home/: .claude.json
Overview_Tutorials/claude_config/home/.claude/: settings.local.json
Overview_Tutorials/debian-docker/base/: .env.example  Dockerfile  build-docker-image.bat  start-container.bat  start_rdp.sh  start_vnc.sh  stop-container.bat
Overview_Tutorials/debian-docker/cursor.ai/: cursor_crash_workaround.txt
Overview_Tutorials/ec-embedded/ec-embedded.copy/Doc/: claude_code_knowhow.md
Overview_Tutorials/ec-embedded/ec-embedded.copy/Doc/Common/Conf/: conf.py  requirements.txt
Overview_Tutorials/ec-embedded/ec-embedded.copy/Doc/Common/Media/: Acontis.eps  acontis-TrainingSlaves-ENI.xml
Overview_Tutorials/ec-embedded/ec-embedded.copy/Doc/Common/Sphinx-Ext/: CustomizedDirectives.py  EcDirective.py  PackagesFileListParser.py
Overview_Tutorials/ec-embedded/ec-embedded.copy/Doc/Common/Templates/: hlist-doxygroups.jinja  release-notes.jinja  supported-nics.jinja
Overview_Tutorials/ec-embedded/ec-embedded.copy/Doc/Common/Tools/: EcDemoCmdlineParser.py  SetEnv.bat  (+1 more)
Overview_Tutorials/ec-embedded/ec-embedded.copy/Doc/EcMaster/: make.bat
Overview_Tutorials/ec-embedded/ec-embedded.copy/Doc/EcMonitor/: make.bat
Overview_Tutorials/ec-embedded/ec-embedded.copy/Doc/EcMotionAdvanced/: make.bat
Overview_Tutorials/ec-embedded/ec-embedded.copy/Doc/EcSupportedNics/: emllBPF.rst  emllCmsisEth.rst  emllDW3504.rst  emllDpdk.rst  emllHPE.rst  emllI8255x.rst  emllIntelGbe.rst  emllNdis.rst  emllPCap.rst  emllR6040.rst  emllSHEth.rst  emllSockRaw.rst  emllTemac.rst  emllTiEnetCpswg.rst  emllVlan.rst  index.rst  supported-fingerprint.rst
Overview_Tutorials/ec-embedded/ec-embedded.copy/Doc/EcWrapperPython/: index.rst  introduction.rst  make.bat  programmers-guide.rst
Overview_Tutorials/ec-embedded/ec-embedded.copy/Doc/EcWrapperRust/: faq.rst  index.rst
Overview_Tutorials/ec-embedded/ec-embedded.copy/Doc/EcWrapperSwift/: introduction.rst
Overview_Tutorials/ec-embedded/ec-embedded.copy/Doc/Examples/: ecdemo-cmdline-emll.rst  ecdemo-cmdline.rst
Overview_Tutorials/ec-embedded/ec-embedded.copy/Doc/LinkLayer/: emllbcmgenet.rst  emllbcmnetxtreme.rst  emllcmsiseth.rst  emllcpsw.rst  emllcpswg.rst  emlldw3504.rst  emllfslfec.rst  emllgem.rst  emllhpe.rst  emlli8255x.rst  emllicssg.rst  emllintelgbe.rst  emlllan743x.rst  emllndis.rst  emllremote.rst  emllsheth.rst  emlltemac.rst  emlltienetcpswg.rst  emllvlan.rst
Overview_Tutorials/ec-embedded/ec-embedded.copy/Doc/OsLayer/: os_cmsis-rtos.rst  os_freertos.rst  os_intime.rst  os_rtx.rst  os_vxworks.rst  os_xenomai.rst  os_zephyr.rst
Overview_Tutorials/ec-master_demo/linux/ec-master/Workspace/cmake/EcMasterDemoDc/: CMakeLists.txt
Overview_Tutorials/ec-master_demo/linux/ec-master/Workspace/cmake/EcMasterDemoMinimal/: CMakeLists.txt
Overview_Tutorials/ec-master_demo/linux/ec-master/Workspace/cmake/EcMasterDemoMotion/: CMakeLists.txt
Overview_Tutorials/ec-master_demo/linux/ec-simulator/: CMakeLists.txt
Overview_Tutorials/ec-master_demo/linux/ec-simulator/Examples/Common/: EcLogging.h  EcSelectLinkLayer.cpp
Overview_Tutorials/ec-master_demo/linux/ec-simulator/Examples/EcSimulatorHilDemo/: EcDemoApp.h
Overview_Tutorials/ec-master_demo/linux/ec-simulator/Examples/EcSimulatorHilDemoMotion/: EcDemoApp.cpp
Overview_Tutorials/ec-master_demo/linux/ec-simulator/SDK/INC/: EcError.h  EcLink.h  EcRasServer.h  EcSimulator.h
Overview_Tutorials/ec-master_demo/linux/ec-simulator/Workspace/Linux/EcSimulatorHilDemo/: .cproject
Overview_Tutorials/ec-master_demo/linux/ec-simulator/Workspace/Linux/EcSimulatorHilDemoMotion/: .cproject
Overview_Tutorials/ec-master_demo/linux/ec-simulator/Workspace/cmake/EcSimulatorHilDemoMotion/: CMakeLists.txt
Prompt_Engineering/: .gitignore  requirements.txt  start.sh  stop.sh  todo.md  venv_activate.sh
Prompt_Engineering/all_prompt_engineering_techniques/: basic-prompt-structures.ipynb  cot-prompting.ipynb  few-shot-learning.ipynb  intro-prompt-engineering-lesson.ipynb  prompt-templates-variables-jinja2.ipynb  select_llm.py  zero-shot-prompting.ipynb
anythingllm/BasicArchitecture/: AnythingLLM-LocalLLM-Tutorial.md  RAG_Guide.md  anythingllm_brownfield_coding_architectures_enhancement.md
bmad/: agents.md  bmad_knowhow.md
bmad/tutorial1/_bmad-output/analysis/: brainstorming-session-2025-01-18.md
bmad/tutorial1/_bmad/bmb/: config.yaml
bmad/tutorial1/_bmad/bmm/: config.yaml
claude-code/Overview_Tutorials/archive/: claude_code_tutorials1b.md  claude_code_tutorials2.md
claude-code/Overview_Tutorials/claude_config/etc/claude-code/: managed-mcp.json
claude-code/Overview_Tutorials/ec-embedded/ec-embedded.copy/Doc/: claude_agentic_repositories.md  claude_code_docs.md  ec-embedded-Doc.code-workspace  global.claude.json
claude-code/Overview_Tutorials/ec-master_demo/linux/ec-master/Workspace/cmake/EcMasterDemo/: CMakeLists.txt
claude-code/Overview_Tutorials/ec-master_demo/linux/ec-master/Workspace/cmake/EcMasterDemoSyncSm/: CMakeLists.txt
claude-code/Overview_Tutorials/ec-master_demo/linux/ec-simulator/Workspace/cmake/EcSimulatorHilDemo/: CMakeLists.txt
ollama/: ollama_knowhow.md  set_ollama_proxy.bat
tools/: deepagents_websearch_ollama_nokey_complete.md
tutorial1/.claude/: piper-voices-dir.txt
tutorial1/_bmad/_config/: files-manifest.csv  manifest.yaml
tutorial1/_bmad/_config/ides/: claude-code.yaml
tutorial1/_bmad/_memory/: config.yaml
tutorial1/_bmad/cis/: config.yaml
tutorial1/_bmad/core/: config.yaml
tutorials/: tutorials.html
(+422 files in other folders)
